# simplex

./: README.md  simplex.cabal
src/: Lib.hs
